--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScannerQR"></activity>
+        <activity android:name=".Recursos.ScannerQR"></activity>
         <activity android:name=".Inicio">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,9 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuPrincipal" />
-        <activity android:name=".persona" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MenuMapa" />
+        <activity android:name=".Persona" />
+        <activity android:name=".Familia" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
